Committing the current state of the project before any further changes are made

--- a/RacesListCountDown/Base.lproj/Main.storyboard
+++ b/RacesListCountDown/Base.lproj/Main.storyboard
@@ -1,14 +1,15 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="18122" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="ZXi-pm-bpy">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="19529" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="zgh-7G-tQF">
     <device id="retina6_1" orientation="portrait" appearance="light"/>
     <dependencies>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="18093"/>
+        <deployment identifier="iOS"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="19519"/>
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
         <capability name="System colors in document resources" minToolsVersion="11.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <scenes>
-        <!--Races-->
+        <!--Rockhampton-->
         <scene sceneID="tne-QT-ifu">
             <objects>
                 <viewController id="BYZ-38-t0r" customClass="ViewController" customModule="RacesListCountDown" customModuleProvider="target" sceneMemberID="viewController">
@@ -18,16 +19,17 @@
                         <viewLayoutGuide key="safeArea" id="6Tk-OE-BBY"/>
                         <color key="backgroundColor" systemColor="systemBackgroundColor"/>
                     </view>
-                    <navigationItem key="navigationItem" title="Races" id="9YG-uk-W3t"/>
+                    <navigationItem key="navigationItem" title="Rockhampton" id="9YG-uk-W3t"/>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
             </objects>
             <point key="canvasLocation" x="979.71014492753636" y="138.61607142857142"/>
         </scene>
-        <!--Navigation Controller-->
+        <!--Saved Races-->
         <scene sceneID="Y4W-fy-zts">
             <objects>
                 <navigationController automaticallyAdjustsScrollViewInsets="NO" id="ZXi-pm-bpy" sceneMemberID="viewController">
+                    <tabBarItem key="tabBarItem" title="Saved Races" image="list.number" catalog="system" id="Yv7-PG-bGE"/>
                     <toolbarItems/>
                     <navigationBar key="navigationBar" contentMode="scaleToFill" id="Wuj-Ly-BEW">
                         <rect key="frame" x="0.0" y="44" width="414" height="44"/>
@@ -35,15 +37,52 @@
                     </navigationBar>
                     <nil name="viewControllers"/>
                     <connections>
-                        <segue destination="BYZ-38-t0r" kind="relationship" relationship="rootViewController" id="fIc-px-Z6s"/>
+                        <segue destination="BYZ-38-t0r" kind="relationship" relationship="rootViewController" id="tsn-0h-EFw"/>
                     </connections>
                 </navigationController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="Fp8-1K-bYI" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
             </objects>
             <point key="canvasLocation" x="69.565217391304358" y="138.61607142857142"/>
         </scene>
+        <!--Meeting Broswer-->
+        <scene sceneID="Cbj-Rb-Q9L">
+            <objects>
+                <viewController id="yA5-K0-w7J" customClass="MeetingBrowserUIViewController" customModule="RacesListCountDown" customModuleProvider="target" sceneMemberID="viewController">
+                    <view key="view" contentMode="scaleToFill" id="vTa-cn-N6T">
+                        <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <viewLayoutGuide key="safeArea" id="Zh3-lg-h0C"/>
+                        <color key="backgroundColor" systemColor="systemBackgroundColor"/>
+                    </view>
+                    <tabBarItem key="tabBarItem" title="Meetings" image="calendar" catalog="system" id="5em-uq-nh2"/>
+                    <navigationItem key="navigationItem" title="Meeting Broswer" id="GjV-hS-38t"/>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="Q64-jD-DUk" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="91" y="863"/>
+        </scene>
+        <!--Tab Bar Controller-->
+        <scene sceneID="ogS-JX-RCC">
+            <objects>
+                <tabBarController id="zgh-7G-tQF" sceneMemberID="viewController">
+                    <tabBar key="tabBar" contentMode="scaleToFill" insetsLayoutMarginsFromSafeArea="NO" id="e6x-5M-fTt">
+                        <rect key="frame" x="0.0" y="0.0" width="414" height="49"/>
+                        <autoresizingMask key="autoresizingMask"/>
+                        <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                    </tabBar>
+                    <connections>
+                        <segue destination="ZXi-pm-bpy" kind="relationship" relationship="viewControllers" id="Bdj-yT-Z2q"/>
+                        <segue destination="yA5-K0-w7J" kind="relationship" relationship="viewControllers" id="6Bd-8x-SyE"/>
+                    </connections>
+                </tabBarController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="kc3-uq-I0W" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="-1122" y="402"/>
+        </scene>
     </scenes>
     <resources>
+        <image name="calendar" catalog="system" width="128" height="106"/>
+        <image name="list.number" catalog="system" width="128" height="97"/>
         <systemColor name="systemBackgroundColor">
             <color white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
         </systemColor>
